# miTEA-HiRes

./: LICENSE  README.md  constants.py  istarmap.py  main.py  pyproject.toml  utils.py
miRTarBase/release_8.0/: mmu_MTI_filtered.csv
src/mitea_hires/: __init__.py  constants.py  main.py  utils.py
src/mitea_hires/miRTarBase/: hsa_MTI_filtered.csv
